--- a/members.html
+++ b/members.html
@@ -104,8 +104,8 @@
 										<h6> Jeslyn is an incoming freshman at Macaulay Honors College at Hunter College. She is passionate about addressing the health disparities in healthcare, increasing diversity in the field of medicine, and improving literacy about current events in science. Mentoring in Medicine has provided her the opportunity to empower and be inspired by other students and healthcare professionals. In her free time, Jeslyn enjoys painting, watching neuroscience workshops, and listening to music.</h6>
 										</a>
 
-										<a href=""><img src="" alt="" />
 										<h5>Esha Narla</h5>
+										<a href="members/Esha.png"><img src="members/Esha.png" alt="" />
 										<h6> Esha is a rising senior in high school who is immensely interested in the medical field. Due to her interests and curiosity, Esha has interned at various hospitals, volunteered at nursing homes, and is currently immersed in MIM to bring forward her passion. In her free time, she enjoys spending time with friends and family, physical activity, and eating food. She aspires to be a dermatologist in the future, specializing in the treatment of skin conditions. </h6>
 										</a>
 
