--- a/research.html
+++ b/research.html
@@ -62,13 +62,23 @@
 								How have their <b> teaching methods </b> changed? <br>
 								How have their <b> students' attendance and performance </b> have changed? <br>
 								How has their <b> lifestyle </b> changed? <br>
-							</p>
+							</p><br>
+							<h3> As of now, we have 140 responses! We are still in the process of collecting and analyzing data, but here is our scientific poster so far:
+							</h3>
+							<section class="thumbnails">
+
+									<div>
+									<a href="images/poster.png"><img src="images/poster.png" alt="" />
+									<h5> Our Scientific Poster! </h5>
+									</a>
+									</div>
+								</section>
 
 							<!-- <h3> Educators: We Need Your Help. Your Voice is <b> Invaluable. </b> </h3>
 							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, confidential 5-7 minute survey down below: </p>
 							<a href="https://bit.ly/qsolutions19" class="button special" target="_blank">
 								Survey: The Impact of COVID-19 on Educators</a> -->
-							
+
 
 					</div>
 				</div>
