--- a/members.html
+++ b/members.html
@@ -81,7 +81,7 @@
 
 										<a href=""><img src="" alt="" />
 										<h5>Chase Smith</h5>
-										<h6> Chase is going to 6th grade at Rydal Elementary. He likes to play video games with his dad, and he wants to be an engineer when he grow up.
+										<h6> Chase is going to 6th grade at Rydal Elementary. He likes to play video games with his dad, and he wants to be an engineer when he grow up.</h6>
 										</a>
 
 										<a href=""><img src="" alt="" />
