--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 					<li><a href="infographics.html">Infographics</a></li>
 					<li><a href="videos.html">Videos</a></li>
 					<li><a href="projectpi.html">Project PI</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+
 
 				</ul>
 			</nav>
@@ -104,6 +106,7 @@
 						<div>
 							<div class="box">
 								<!-- <div class="image fit">
+								<img src="images/shield.png" alt=""/>
 								</div> -->
 								<div class="content">
 									<header class="align-center">
