--- a/projectpi.html
+++ b/projectpi.html
@@ -30,6 +30,8 @@
 					<li><a href="infographics.html">Infographics</a></li>
 					<li><a href="videos.html">Videos</a></li>
 					<li><a href="projectpi.html">Project PI</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+
 				</ul>
 			</nav>
 
