--- a/members.html
+++ b/members.html
@@ -77,8 +77,10 @@
 										<h5>Atqiya Nafisa</h5>
 										</a>
 
-										<a href=""><img src="" alt="" />
+
 										<h5>Shiraz Robinson II</h5>
+											<a href="members/Shiraz.jpg"><img src="members/Shiraz.jpg" alt="" />
+										<h6> Shiraz is a college junior that studies plant biology and mathematics. He aspires to become a physician-scientist, mathematician, and teacher. Some of his research interests are the endocannabinoid system and unified physics. His medical interests are Computational Medicine, Energy Medicine, Medical Physics, Integrative Medicine, Oncology, and Sports Medicine. </h6>
 										</a>
 
 										<a href=""><img src="" alt="" />
