--- a/research.html
+++ b/research.html
@@ -64,9 +64,10 @@
 								How have their <b> teaching methods </b> changed? <br>
 								How have their <b> students' attendance and performance </b> have changed? <br>
 								How has their <b> lifestyle </b> changed? <br>
-							</p><br>
-							<h3> As of now, we have 140 responses! We are still in the process of collecting and analyzing data, but here is our scientific poster so far:
-							</h3>
+							</p><br><br><br>
+							<p> As of now, we have 140 responses! We are still in the process of collecting and analyzing data, but here are our results so far:
+							</p>
+							<iframe src="https://www.google.com/maps/d/embed?mid=1HYCde20jmEjXcVK9m4OJS9hxXg1VdKzl" width="640" height="480"></iframe>
 							<section class="thumbnails">
 
 									<div>
