--- a/members.html
+++ b/members.html
@@ -125,8 +125,8 @@
 									</div>
 
 									<div>
-										<a href=""><img src="" alt="" />
 										<h5>Malcolm Forte</h5>
+										<a href="Malcolm.jpg"><img src="Malcolm.jpg" alt="" />
 										<h6> Malcolm is in 6th grade and will attend Simpson Middle School. He likes to play video games with his cousin and wants to become an epidemiologist when he grows up! </h6>
 										</a>
 
