--- a/videos.html
+++ b/videos.html
@@ -57,6 +57,9 @@
 								<iframe width="350" height="250"src="https://www.youtube.com/embed/zCqLNMI8ZtE"> </iframe>
 								<iframe width="350" height="250"src="https://www.youtube.com/embed/1UncOmHhu8s"></iframe>
 								<iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
+								<iframe width="350" height="250"src="https://www.youtube.com/embed/MnLBZvqaMZY"></iframe>
+								<iframe width="350" height="250"src="https://www.youtube.com/embed/3wIxGEh_GHY"></iframe>
+
 								</section>
 						</header>
 				</div>
