--- a/members.html
+++ b/members.html
@@ -75,6 +75,7 @@
 
 										<a href=""><img src="" alt="" />
 										<h5>Atqiya Nafisa</h5>
+										<h6> Atqiya Nafisa is currently 16 years old; was born in Bangladesh, grew up in NY and now lives in North Carolina. She is a senior in high school and an altruistic, who always likes to help others. She is conscientious, cooperative, resilient, and a team player, very eager to learn. She has been recognized in her community for her demonstration of her leadership abilities through many class activities. She is a huge math and science enthusiast. Atqiya is hoping to pursue her interests in the medical world after graduating high school while also working towards making a difference and leaving an imprint in the world. However, she plans to spend the rest of her high school years with passion, dedication, and grace as she hopes to keep moving forward and continue to gradually improve her skills and better herself as a person. </h6>
 										</a>
 
 
