--- a/members.html
+++ b/members.html
@@ -98,6 +98,7 @@
 									<div>
 										<a href=""><img src="" alt="" />
 										<h5>Elena Chadwick</h5>
+										<h6> Elena is an 8th grader at BASIS Peoria who has been involved with many volunteering programs over the years, such as Feed My Starving Children, and her local church: CCV. Baking and cooking are some of her hobbies. She is interested in biology and psychology and would love to explore these fields in the future. She also loves wildlife and wants to help animals without a home, find one! </h6>
 										</a>
 
 										<a href=""><img src="" alt="" />
