--- a/research.html
+++ b/research.html
@@ -64,7 +64,15 @@
 								How have their <b> teaching methods </b> changed? <br>
 								How have their <b> students' attendance and performance </b> have changed? <br>
 								How has their <b> lifestyle </b> changed? <br>
-							</p><br><br><br>
+
+							</p><br>
+
+							<h3> Educators: We Need Your Help. Your Voice is <b> Invaluable. </b> </h3>
+							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, confidential 5-7 minute survey down below: </p>
+							<a href="https://bit.ly/qsolutions19" class="button special" target="_blank">
+								Survey: The Impact of COVID-19 on Educators</a>
+
+							<br><br><br>
 							<p> As of now, we have 140 responses! We are still in the process of collecting and analyzing data, but here are our results so far:
 							</p>
 							<iframe src="https://www.google.com/maps/d/embed?mid=1HYCde20jmEjXcVK9m4OJS9hxXg1VdKzl" width="640" height="480"></iframe>
@@ -76,11 +84,6 @@
 									</a>
 									</div>
 								</section>
-
-							<!-- <h3> Educators: We Need Your Help. Your Voice is <b> Invaluable. </b> </h3>
-							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, confidential 5-7 minute survey down below: </p>
-							<a href="https://bit.ly/qsolutions19" class="button special" target="_blank">
-								Survey: The Impact of COVID-19 on Educators</a> -->
 
 
 					</div>
